[project]
name = "whitetreebible-github-io"
version = "0.1.0"
description = "WhiteTreeBible main page"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.20",
    "mkdocs-static-i18n>=1.3.0",
    "tomlscript>=0.2.1",
]

[tool.tomlscript]
serve = "mkdocs serve"
deploy = "mkdocs gh-deploy"
